# Point_In_Polygon

./: .gitignore  CMakeLists.txt  README.md  draw_polygon.py  main  main.cpp
data/: 3.txt  4.txt
data/txt/: 4.txt
src/algo/: in_area.cpp  in_area.h
src/errors_handling/: CMakeLists.txt  errors_processing.cpp  errors_processing.h  parser.cpp  parser.h
